Conformance check and fixes for Phase 2B